[package]
name = "k8s-cri"
version = "0.10.0"
license = "Apache-2.0"
authors = ["kflansburg <kevin.flansburg@gmail.com>"]
categories = ["api-bindings"]
description = "Bindings Kubernetes CRI"
edition = "2024"
keywords = ["client", "kubernetes", "k8s", "cri"]
repository = "https://github.com/kflansburg/k8s-cri"
documentation = "https://docs.rs/crate/k8s-cri"
readme = "README.md"

[dependencies]
tonic = { version = "0.14" }
tonic-prost = "0.14"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
hyper-util = "0.1.20"
